--- a/doc/INSTALL.TXT
+++ b/doc/INSTALL.TXT
@@ -1,44 +1,40 @@
-What you need:
+REQUIREMENTS:
  - linux server
  - java jdk version 1.6
  - ant version 1.8
  - scala version 2.10 - http://www.scala-lang.org/
  - ninthdrug.jar - https://github.com/ninthdrug/ninthdrug
 
-Optional:
+OPTIONS:
  - postgresql
  - sudo rights to postgres user
 
-Configuring:
-   The installation adds the path to the main doom configuration to your $HOME/.ninthdrug file.
-   That should be ${install.dir}/conf/taakapp.conf.  Edit this as you see fit.
+CONFIGURATION:
 
-   The doom database can be created by running the create_fido_db.sh script.  
-   You will need sudo rights to the postgres user for this step.
-   - create_taakapp_db.sh
+- Edit the conf/taakapp.conf
+- This config file can be renamed, just update to build.xml (<property file="conf/taakapp.conf"/>)
+- Edit the appdevkit/daogenerator.conf
+- properties: package name, app name and the source file
+- Edit .ninthdrug to reference ninthdrug.conf and taakapp.conf in <install.dir>/conf/
+- Edit start_webserver
+- Run setup.sh
 
-Edit the conf/taakapp.conf file to set the correct user and password for the taak database.
-Edit appdevkit/daogenerator.conf 
-Edit appdevkit/sql/create_tables.sh
+DATABASE:
 
-Is written for Postgres.
-- Create a user and a database for that user
-- Create database and tables
+- dbadmin.sh (md)
+- dbadmin.sh (ct)
 
-Code Generator:
+CODE GENERATOR:
  
-- Use this command to generate a db.description file
-     psql taak taak -h localhost < describe_tables.sql > db.description
-- Edit the daogenerator.conf
+- Use dbadmin.sh (desc) to generate db.description
 - Run the daogenerator.sh <tablename> for each table
 - Publish code to src directory with publishdaocode.sh
 
-Building from source:
- - Extract the tar ball
- - Change to the taakapp/trunk directory
- - Edit the conf/taakapp.conf file to fit your installation
+BUILD AND DEPLOY:
+
  - Invoke ant
  - Invoke ant deploy
+ - Run <install.dir>/bin/start_webserver
 
 
 Defaults:
