--- a/doc/INSTALL.TXT
+++ b/doc/INSTALL.TXT
@@ -1,4 +1,5 @@
 REQUIREMENTS:
+
  - linux server
  - java jdk version 1.6
  - ant version 1.8
@@ -6,6 +7,7 @@ REQUIREMENTS:
  - ninthdrug.jar - https://github.com/ninthdrug/ninthdrug
 
 OPTIONS:
+
  - postgresql
  - sudo rights to postgres user
 
@@ -30,20 +32,41 @@ CODE GENERATOR:
 - Run the daogenerator.sh <tablename> for each table
 - Publish code to src directory with publishdaocode.sh
 
+EDIT SOURCE CODE:
+
+- Customize src/web/alpha
+- Customize src/main/scala
+
 BUILD AND DEPLOY:
 
  - Invoke ant
  - Invoke ant deploy
  - Run <install.dir>/bin/start_webserver
+ 
+
+DEFAULT SETUP:
+
+~/.ninthdrug
+     /opt/ninthdrug/conf/ninthdrug.conf
+     /opt/ninthdrug/conf/<taakapp>.conf
+     
+/opt/ninthdrug/bin/start_webserver
+/opt/ninthdrug/conf/ninthdrug.conf
+/opt/ninthdrug/conf/<taakapp>.conf
+/opt/ninthdrug/lib/*.jar
+/opt/ninthdrug/log/ninthdrug.log
+/opt/ninthdrug/websites/<taakapp>/
 
 
-Defaults:
+REFERENCES:
 
-taakapp database
-  -tasks table
-  -users table
 
-  each table should have
+
+NOTES:
+
+The daogenerator.sh is written for tables with these two required fields. "active" should
+be defaulted to true.
+
   -id Int
   -active Boolean
 
